<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:background="@drawable/front_pic">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_chooser_text"
            android:id="@+id/textView" android:layout_alignParentLeft="false"
            android:layout_alignParentTop="true" android:layout_marginTop="@dimen/test_chooser_text_margin_top" android:textStyle="bold"
            android:textSize="@dimen/test_chooser_text_size" android:textIsSelectable="false" android:layout_marginLeft="@dimen/test_chooser_text_margin_right_left"
            android:typeface="serif" android:layout_alignParentStart="false"
            android:layout_alignParentEnd="false" android:layout_centerHorizontal="true"
            android:textColor="@color/white"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_chooser_body_label"
            android:id="@+id/text_bodies"
            android:textSize="@dimen/test_chooser_text_size"
            android:textStyle="bold"
            android:typeface="serif"
            android:layout_alignLeft="@+id/textView" android:layout_below="@+id/textView"
            android:textColor="@color/white" android:layout_marginTop="@dimen/test_chooser_text_variant_margin_top"
            android:layout_marginLeft="@dimen/test_chooser_text_variant_margin_left"/>
    <Button
            android:layout_width="@dimen/test_arrow_size"
            android:layout_height="@dimen/test_arrow_size"
            android:id="@+id/to_bodies_activity"
            android:layout_alignParentEnd="false" android:singleLine="false"
            android:layout_alignParentStart="false"
            android:background="@drawable/arrow"
            android:layout_alignRight="@+id/textView" android:layout_alignTop="@+id/text_bodies"
            android:layout_marginRight="@dimen/test_chooser_arrow_margin_right"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_chooser_skeleton_label"
            android:id="@+id/text_muscles"
            android:textSize="@dimen/test_chooser_text_size" android:textStyle="bold" android:typeface="serif"
            android:textColor="@color/white" android:layout_alignLeft="@+id/textView"
            android:layout_below="@+id/text_bodies" android:layout_marginTop="@dimen/test_chooser_text_variant_margin_top"
            android:layout_marginLeft="@dimen/test_chooser_text_variant_margin_left"/>
    <Button
            android:layout_width="@dimen/test_arrow_size"
            android:layout_height="@dimen/test_arrow_size"
            android:id="@+id/to_muscles_activity"
            android:clickable="false"
            android:background="@drawable/arrow"
            android:layout_alignRight="@+id/textView" android:layout_alignTop="@+id/text_muscles"
            android:layout_marginRight="@dimen/test_chooser_arrow_margin_right"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_chooser_circ_system_label"
            android:id="@+id/text_cirtsys"
            android:textStyle="bold" android:textSize="@dimen/test_chooser_text_size" android:typeface="serif"
            android:layout_alignLeft="@+id/textView" android:layout_below="@+id/text_muscles"
            android:textColor="@color/white" android:layout_marginTop="@dimen/test_chooser_text_variant_margin_top"
            android:layout_marginLeft="@dimen/test_chooser_text_variant_margin_left"/>
    <Button
            android:layout_width="@dimen/test_arrow_size"
            android:layout_height="@dimen/test_arrow_size"
            android:id="@+id/to_circ_activity"
            android:singleLine="false"
            android:background="@drawable/arrow"
            android:layout_alignRight="@+id/textView" android:layout_alignTop="@+id/text_cirtsys"
            android:layout_marginRight="@dimen/test_chooser_arrow_margin_right"/>
</RelativeLayout>